tests/NormalTests/paczka2/big_fuzzy/88807658.err
Error in line 2: vqFo S74 59,3
Error in line 13: vqFo A92 107,6
Error in line 20: 48Srm S320 99,4
Error in line 25: vqFo S74 158,9
Error in line 31: S74 S964 23,2
Error in line 39: vqFo A92 42,2
Error in line 45: gvyr S74 80,9
Error in line 50: MigHkCnHVH S320 69,0
Error in line 54: MigHkCnHVH S20 5,8
Error in line 46: vqFo S320 13,1
Error in line 43: Po22 A92 57,1
Error in line 75: gvyr A92 32,1
Error in line 78: 48Srm A92 16,8
Error in line 79: gvyr S964 90,1
Error in line 82: gvyr A92 53,7
Error in line 76: S74 S74 64,9
Error in line 91: vqFo A92 42,9
Error in line 100: vqFo S320 57,3
Error in line 84: 48Srm S74 90,0
Error in line 102: vqFo S964 16,5
Error in line 96: Po22 S964 14,9
Error in line 110: S74 A92 10,1
Error in line 118: MigHkCnHVH S320 227,9
Error in line 120: MigHkCnHVH A92 27,9
Error in line 122: MigHkCnHVH S74 78,8
Error in line 130: S74 A92 50,8
Error in line 115: vqFo S74 249,8
Error in line 142: S74 S74 58,8
Error in line 147: S74 S964 85,5
Error in line 151: MigHkCnHVH S320 71,0
Error in line 165: MigHkCnHVH S964 7,5
Error in line 161: 48Srm S74 70,7
Error in line 168: 48Srm S320 23,5
Error in line 164: vqFo S74 11,1
Error in line 174: S74 S964 90,03
Error in line 180: vqFo A92 68,7
Error in line 186: gvyr S964 64,4
Error in line 189: S74 S964 11,3
Error in line 204: 48Srm S74 7,9
Error in line 217: S74 A92 10,4
Error in line 212: gvyr A92 72,1
Error in line 218: S74 S964 40,1
Error in line 220: gvyr S74 37,7
Error in line 219: Po22 S320 7,7
Error in line 233: gvyr A92 19,1
Error in line 241: Po22 A92 37,8
